--- a/index.html
+++ b/index.html
@@ -256,6 +256,42 @@
           </button>
         </div>
       </section>
+
+      <section class="about">
+        <div class="card">
+          <img src="img/about1.png" alt="flower" class="flower" />
+          <img src="img/decoration.png" alt="decoration" class="decoration" />
+
+          <div class="des">
+            <h1>Summer cactus & succulents</h1>
+            <p>
+              We are an online plant shop offering a wide range of cheap and
+              trendy plants
+            </p>
+            <button>
+              find more
+              <i class="ph ph-caret-right"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="img/about2.png" alt="flower" class="flower" />
+          <img src="img/decoration.png" alt="decoration" class="decoration" />
+
+          <div class="des">
+            <h1>Styling Trends & much more</h1>
+            <p>
+              We are an online plant shop offering a wide range of cheap and
+              trendy plants
+            </p>
+            <button>
+              find more
+              <i class="ph ph-caret-right"></i>
+            </button>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
