blog page created

--- a/index.html
+++ b/index.html
@@ -292,6 +292,73 @@
           </div>
         </div>
       </section>
+
+      <section class="blog">
+        <h1 class="main-heading">Our Blog Posts</h1>
+
+        <p class="main-content">
+          We are an online plant shop offering a wide range of cheap and trendy
+          plants.
+        </p>
+
+        <div class="blog-cards">
+          <div class="card">
+            <img src="img/blog1.png" alt="" />
+            <div class="info">
+              <span>September 12 I Read in 6 minutes</span>
+              <h1>Cactus & Succulent Care Tips</h1>
+              <p>
+                Cacti are succulents are easy care plants for any home or patio.
+              </p>
+              <button>
+                Read More
+                <i class="ph ph-caret-right"></i>
+              </button>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="img/blog2.png" alt="" />
+            <div class="info">
+              <span>September 13 I Read in 2 minutes</span>
+              <h1>Top 10 Succulents for Your Home</h1>
+              <p>Best in hanging baskets. Prefers medium to high light.</p>
+              <button>
+                Read More
+                <i class="ph ph-caret-right"></i>
+              </button>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="img/blog3.png" alt="" />
+            <div class="info">
+              <span>September 15 I Read in 3 minutes</span>
+              <h1>Cacti & Succulent Care Tips</h1>
+              <p>
+                Cacti and succulents thrive in containers and because most are..
+              </p>
+              <button>
+                Read More
+                <i class="ph ph-caret-right"></i>
+              </button>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="img/blog4.png" alt="" />
+            <div class="info">
+              <span>September 15 I Read in 2 minutes</span>
+              <h1>Best Houseplants Room by Room</h1>
+              <p>The benefits of houseplants are endless. In addition to..</p>
+              <button>
+                Read More
+                <i class="ph ph-caret-right"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
