desktop version finished and should make responsive footer for several screens

--- a/index.html
+++ b/index.html
@@ -360,5 +360,122 @@
         </div>
       </section>
     </div>
+
+    <footer>
+      <div class="container footer">
+        <div class="cols-1">
+          <div class="plant">
+            <img src="img/footer-plant.png" alt="plant" />
+            <h2>Garden Care</h2>
+            <p>
+              We are an online plant shop offering a wide range of cheap and
+              trendy plants.
+            </p>
+          </div>
+
+          <div class="plant mid-border">
+            <img src="img/footer-plant.png" alt="plant" />
+            <h2>Plant Renovation</h2>
+            <p>
+              We are an online plant shop offering a wide range of cheap and
+              trendy plants.
+            </p>
+          </div>
+
+          <div class="plant">
+            <img src="img/footer-plant2.png" alt="plant" />
+            <h2>Watering Graden</h2>
+            <p>
+              We are an online plant shop offering a wide range of cheap and
+              trendy plants.
+            </p>
+          </div>
+
+          <div class="join">
+            <h3>Would you like to join newsletters?</h3>
+
+            <div class="email-form">
+              <input type="email" placeholder="enter your email address..." />
+              <button>Join</button>
+            </div>
+
+            <p>
+              We usually post offers and challenges in newsletter. We’re your
+              online houseplant destination. We offer a wide range of
+              houseplants and accessories shipped directly from our (green)house
+              to yours!
+            </p>
+          </div>
+        </div>
+
+        <div class="cols-2">
+          <img src="img/Logo.png" alt="" />
+
+          <p>
+            <i class="ph ph-map-pin"></i>
+            70 West Buckingham Ave. Farmingdale, NY 11735
+          </p>
+
+          <p>
+            <i class="ph ph-envelope-simple"></i>
+            contact@greenshop.com
+          </p>
+
+          <p>
+            <i class="ph ph-phone-call"></i>
+            +88 01911 717 490
+          </p>
+        </div>
+
+        <div class="cols-3">
+          <ul>
+            <h1>My Account</h1>
+            <li>My Account</li>
+            <li>Our stores</li>
+            <li>Contact us</li>
+            <li>Career</li>
+            <li>Specials</li>
+          </ul>
+
+          <ul>
+            <h1>Help & Guide</h1>
+            <li>Help Center</li>
+            <li>How to Buy</li>
+            <li>Shipping & Delivery</li>
+            <li>Product Policy</li>
+            <li>How to Return</li>
+          </ul>
+
+          <ul>
+            <h1>Categories</h1>
+            <li>House Plants</li>
+            <li>Potter Plants</li>
+            <li>Seeds</li>
+            <li>Small Plants</li>
+            <li>Accessories</li>
+          </ul>
+
+          <div class="social-media">
+            <h1>Social Media</h1>
+
+            <div class="socials">
+              <img src="img/Facebook.png" alt="socials" />
+              <img src="img/Instagram.png" alt="socials" />
+              <img src="img/Twitter.png" alt="socials" />
+              <img src="img/Linkedin.png" alt="socials" />
+              <img src="img/Union.png" alt="socials" />
+            </div>
+
+            <h1>We accept</h1>
+
+            <img src="img/media.png" alt="transaction" />
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <p class="reserved">© 2021 GreenShop. All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
